# video-mosaic-tauri

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AI_HANDOFF.md  Build-AutoMosaic-Review.cmd  CLAUDE.md  README.md  ai_agent_from_scratch_tauri_spec.md  dev.cmd  package-lock.json  package.json  pyside6_remaining_tasks.md  tauri_auto_mosaic_detailed_requirements_spec_v2_1.md  unimplemented-features.md  未実装機能一覧.md
apps/backend/: pyproject.toml
apps/backend/src/auto_mosaic/: __init__.py
apps/backend/src/auto_mosaic/api/: __init__.py  cli_main.py
apps/backend/src/auto_mosaic/api/commands/: __init__.py  _detect_settings.py  _export_presets.py  _export_queue.py  _installed_models.py  _project_mutation.py  cancel_detect_job.py  cancel_export.py  (+47 more)
apps/backend/src/auto_mosaic/application/: __init__.py  responses.py
apps/backend/src/auto_mosaic/domain/: mask_continuity.py  project.py  track_quality.py
apps/backend/src/auto_mosaic/infra/: runtime_jobs.py
apps/backend/src/auto_mosaic/runtime/: bootstrap.py  external_tools.py  file_io.py  paths.py
apps/backend/tests/: test_cli_smoke.py  test_detect_continuity.py  test_domain_track.py  test_export_resolver.py  test_job_ledger.py  test_mask_continuity.py  test_merge_held_segments.py  test_model_integrity.py  test_pyside6_project_migration.py  test_source_detail.py  test_track_quality.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/review-runtime/: .gitignore  README.txt
apps/desktop/src-tauri/src/: lib.rs  main.rs
(+132 files in other folders)
