[package]
name = "taurimozaic-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "taurimozaic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.8.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4.0"
